# GarminImg

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  README.md  extract.odt  extract.txt
cmake/Modules/: FindGDAL.cmake  FindJPEG.cmake  FindZIP.cmake
srcCommon/: CMakeLists.txt  proj_x.cpp  proj_x.h
srcDecodeImg/: CException.h  CFuzzyMap.h  CGarminDecoder.cpp  CGarminDecoder.h  CGarminPolygon.cpp  CGarminPolygon.h  CGarminRaster.cpp  CGarminRaster.h  CGarminStrTbl6.cpp  CGarminStrTbl6.h  CGarminStrTbl8.cpp  CGarminStrTbl8.h  CGarminStrTblUtf8.cpp  CGarminStrTblUtf8.h  CMakeLists.txt  CSubfileTask.h  Garmin.cpp  Garmin.h  IGarminStrTbl.cpp  IGarminStrTbl.h  Platform.h  main.cpp  version.h
srcEncodeImg/: CEncoder.cpp  CEncoder.h  CException.h  CFileGmp.cpp  CFileGmp.h  CFileImg.cpp  CFileImg.h  CFileLbl.cpp  CFileLbl.h  CFileRgn.cpp  CFileRgn.h  CFileTre.cpp  CFileTre.h  CGarminEncoder.cpp  CGarminEncoder.h  CMakeLists.txt  CMap.cpp  CMap.h  CSubMap.cpp  CSubMap.h  CSubfileTask.h  Garmin.cpp  Garmin.h  Platform.h  argv.cpp  argv.h  main.cpp  version.h
srcEncodeImg/headers/: CHdrGmapsupp.cpp  CHdrGmapsupp.h  CHdrGmp.cpp  CHdrGmp.h  CHdrLbl.cpp  CHdrLbl.h  CHdrRgn.cpp  CHdrRgn.h  CHdrTre.cpp  CHdrTre.h  IHdrSubfile.cpp  IHdrSubfile.h
srcEncodeImg/helpers/: CBitWriter.cpp  CBitWriter.h  CKeyGen.cpp  CKeyGen.h  CLinePreparer.cpp  CLinePreparer.h
srcEncodeImg/items/: CPolyline.cpp  CPolyline.h  CTile.cpp  CTile.h  IItem.cpp  IItem.h
srcEncodeImg/sections/: CLbl1.cpp  CLbl1.h  CLbl12.cpp  CLbl12.h  CLbl28.cpp  CLbl28.h  CLbl29.cpp  CLbl29.h  CRgn2.cpp  CRgn2.h  CRgn3.cpp  CRgn3.h  CRgn4.cpp  CRgn4.h  CSection.cpp  CSection.h  CTre1.cpp  CTre1.h  CTre2.cpp  CTre2.h  CTre3.cpp  CTre3.h  CTre7.cpp  CTre7.h  CTre8.cpp  CTre8.h  ISection.cpp  ISection.h
srcEncodeImg/types/: CFatBlock.cpp  CFatBlock.h  CMapLevel.cpp  CMapLevel.h  CSubdiv.cpp  CSubdiv.h  coords.h
templates/: header.h
